--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
         </div>
         <div class="socials">
             <h2>Follow us on</h2>
-            <a href="https://www.facebook.com/deliziomomos?mibextid=ZbWKwL" target="_blank"><img src="./img/facebook-icon.png" alt=""></a>
-            <a href="https://instagram.com/deliziomomo?igshid=NDk5N2NlZjQ=" target="_blank"><img src="./img/instagram-icon.png" alt=""></a>
+            <a href="https://www.facebook.com/deliziomomos?mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-square-facebook fa-2x"></i></i></a>
+            <a href="https://instagram.com/deliziomomo?igshid=NDk5N2NlZjQ=" target="_blank"><i class="fa-brands fa-square-instagram fa-2x"></i></a>
         </div>
     </div>
     <div class="timing">
