--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         <p class="hero-sub">tender & juicy</p>
     </div>
 </div>
-    
 </section>
 
 <section id="features">
@@ -63,23 +62,9 @@
 </section>
 
 <section id="menu">
-    <div class="menu-img">
-        <img src="./img/menu-food.jpg" alt="">
-    </div>
-    <div class="menu-item">
-        <h3>ALL DAY MENU</h3>
-        <h2>ITEMS</h2>
-        <hr>
-        <p>Simply Veg Steam momos</p><span>75</span><br>
-        <em>All time best Classic momos</em><br>
-        <p>Panner Chatpata Steamed momos</p><span>90</span><br>
-        <em>Panner stuffed momos with the hit of Indian Spices</em><br>
-        <p>Spicy Mushroom Steamed momos</p><span>90</span><br>
-        <em>Mushroom stuffed momos with little bit of Spice</em><br>
-        <p>Veg Tangy Steamed momos</p><span>100</span><br>
-        <em>Classic momos with Tangy masala flavour</em><br>
-        <p>Corn Cheese Steamed momos</p><span>160</span><br>
-        <em>Corn stuffed momos with Cheese</em>
+    <div class="menu-main-div">
+        <img class="img-food" src="./img/menu-food-after.png" alt="">
+        <img class="img-menu" src="./img/full-menu.png" alt="">
     </div>
 </section>
 
@@ -92,7 +77,8 @@
                 <h3>Kalyan West</h3>
                 <p>Shop no 7, Madhav shristi complex, opp Patel R mart Khadakpada, Godrej Hill Rd, Kalyan West, Maharashtra (421301)</p>
             </div>
-            <button class="card-btn" href="https://goo.gl/maps/ZgZ5nRSxyoJJxeji6"><i class="fa-solid fa-location-dot"></i> Get Direction</button>
+            <a href="https://goo.gl/maps/ZgZ5nRSxyoJJxeji6" target="_blank"><i class="fa-solid fa-location-dot"></i> Get Direction</a>
+            <!-- <button class="card-btn" href="https://goo.gl/maps/ZgZ5nRSxyoJJxeji6"><i class="fa-solid fa-location-dot"></i> Get Direction</button> -->
         </div>
         <div class="card1 shadow">
             <img src="./img/location-d.PNG" alt="">
@@ -100,7 +86,8 @@
                 <h3>Dombivli</h3>
                 <p>Shop no 1, kdmc sports complex, near pendharkar police chowki, Dombivli East, Dombivli, Maharashtra (421203)</p>
             </div>
-            <button class="card-btn" href="https://goo.gl/maps/eu89CMmd6G2GFF7F7"><i class="fa-solid fa-location-dot"></i> Get Direction</button>
+            <a href="https://goo.gl/maps/eu89CMmd6G2GFF7F7" target="_blank"><i class="fa-solid fa-location-dot"></i> Get Direction</a>
+            <!-- <button class="card-btn" href="https://goo.gl/maps/eu89CMmd6G2GFF7F7"><i class="fa-solid fa-location-dot"></i> Get Direction</button> -->
         </div>
         
     </div>
@@ -168,12 +155,12 @@
     <div class="middle-sect">
         <div class="order">
             <h2>Order now on</h2>
-            <a href="http://zoma.to/r/19704600" target="_blank"><img src="./img/Zomato_logo.png" alt=""></a>
+            <a href="http://zoma.to/r/19704600" target="_blank"><img src="./img/Zomato_logo.png" alt="" class="zomato-logo"></a>
         </div>
         <div class="socials">
             <h2>Follow us on</h2>
-            <a href="https://www.facebook.com/deliziomomos?mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-square-facebook fa-2x"></i></i></a>
-            <a href="https://instagram.com/deliziomomo?igshid=NDk5N2NlZjQ=" target="_blank"><i class="fa-brands fa-square-instagram fa-2x"></i></a>
+            <a href="https://www.facebook.com/deliziomomos?mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-square-facebook fa-2x" style="--clr:#3b5998"></i></i></a>
+            <a href="https://instagram.com/deliziomomo?igshid=NDk5N2NlZjQ=" target="_blank" ><i class="fa-brands fa-square-instagram fa-2x" style="--clr:#d62976"></i></a>
         </div>
     </div>
     <div class="timing">
